# global_vars

./: CMakeLists.txt  main.cpp
runs/: 000000.cpp  000001.cpp  000002.cpp  000003.cpp  000004.cpp  000005.cpp  000006.cpp  000007.cpp  000008.cpp  000009.cpp  000010.cpp  000011.cpp  000013.cpp  000014.cpp  000016.cpp  000017.cpp  000018.cpp  000019.cpp  000024.cpp  000025.cpp  000026.cpp  000027.cpp  000029.cpp  000030.cpp  000031.cpp  000033.cpp  000034.cpp  000035.cpp  000036.cpp  000037.cpp  000038.cpp  000040.cpp  000041.cpp  000042.cpp  000043.cpp  000044.cpp  000045.cpp  000046.cpp  000047.cpp  000048.cpp  (+5173 more)
